--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_music"
         android:label="Tune In"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_music"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"
@@ -19,7 +19,8 @@
         </activity>
         <activity
             android:name=".SongActivity"
-            android:label="Now Playing"/>
+            android:label="Now Playing"
+            android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
